# lexgram

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
lexgram/: AutomatonStatus.cpp  AutomatonStatus.h  CMakeLists.txt  Exception.h  FiniteAutomaton.cpp  FiniteAutomaton.h  LexParser.cpp  LexParser.h  RegExp.cpp  RegExp.h  Token.h
tests/: CMakeLists.txt  test1.cpp  test_RegExp1.cpp  test_RegExp2.cpp  test_RegExp3.cpp  test_all.cpp  test_tool.cpp  test_tool.h
tests/tools/: test_tool.cpp  test_tool.h
